--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>squabbledMC | awesome videos for awesome people</title>
+    <title>squabbled | YouTube tutorials, gameplays, reviews, and more!</title>
      <div class="topnav">
   <a style="font-family:comfortaa" href="/index.html">Home</a>
   <a style="font-family:comfortaa" href="https://www.youtube.com/squabbledMC">YouTube</a>
