--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <meta name="keywords" content="squabbled, squabbledMC, minecraft, youtube, tutorials, tutorial, gaming">
      <div class="topnav">
   <a style="font-family:comfortaa" href="/index.html">Home</a>
+  <a style="font-family:comfortaa" href="http://blog.squabbled.net>Blog</a>
   <a style="font-family:comfortaa" href="https://www.youtube.com/squabbledMC">YouTube</a>
   <a style="font-family:comfortaa" href="https://twitter.com/squabbledMC">Twitter</a>
   <a style="font-family:comfortaa" href=https://squabbled.tumblr.com/>Tumblr</a>
