--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
   <a style="font-family:comfortaa" href=https://www.instagram.com/squabbledMC/>Instagram</a>
   <a style="font-family:comfortaa" href=https://steamcommunity.com/id/squabbled>Steam</a>
   <a style="font-family:comfortaa" href=https://discord.com/invite/89ZReCQtx5>Discord</a>
+  <script async src="https://cse.google.com/cse.js?cx=0abda22525ea28122"></script>
+<div class="gcse-search"></div>
 </div> 
   </head>
   <body>
