--- a/index.html
+++ b/index.html
@@ -24,16 +24,21 @@
   <a style="font-family:comfortaa" href=https://www.instagram.com/squabbledMC/>Instagram</a>
   <a style="font-family:comfortaa" href=https://steamcommunity.com/id/squabbled>Steam</a>
   <a style="font-family:comfortaa" href=https://discord.com/invite/89ZReCQtx5>Discord</a>
-  <script async src="https://cse.google.com/cse.js?cx=0abda22525ea28122"></script>
-<div class="gcse-search"></div>
 </div> 
   </head>
   <body>
   <h1 style="font-family:comfortaa">heyo, I'm squabbled</h1>
   <p style="font-family:comfortaa">I make videos, mainly tutorials, but I also make tech reviews, gameplays, and more.</p>
-  <p style="font-family:comfortaa">I'm planning on adding more things to this site, but if you need to contact me, please email contact (at) squabbled (dot) net or comment on any of my YouTube videos.</p>
+ 
   
   </body>
+ <footer>
+   <p>© squabbled 2016-2022</p>
+   <a href="mailto:contact@squabbled.net">Email</p>
+    <script async src="https://cse.google.com/cse.js?cx=0abda22525ea28122"></script>
+<div class="gcse-search"></div>
+
+</footer> 
 </div> 
    <style>
 body {background-color: black;}
