--- a/index.html
+++ b/index.html
@@ -24,17 +24,19 @@
   <a style="font-family:comfortaa" href=https://www.instagram.com/squabbledMC/>Instagram</a>
   <a style="font-family:comfortaa" href=https://steamcommunity.com/id/squabbled>Steam</a>
   <a style="font-family:comfortaa" href=https://discord.com/invite/89ZReCQtx5>Discord</a>
+  <a href=/specs.html>Specs</a>
 </div> 
   </head>
   <body>
-  <h1 style="font-family:comfortaa">heyo, I'm squabbled</h1>
-  <p style="font-family:comfortaa">I make videos, mainly tutorials, but I also make tech reviews, gameplays, and more.</p>
- 
+  <h1>heyo, I'm squabbled</h1>
+  <p>I make videos, mainly tutorials, but I also make tech reviews, gameplays, and more.</p>
+  <p>This site is meant to be a place for me to write about myself, my projects/computers, and other junk that I dump on here.</p>
   
   </body>
+<hr>
  <footer>
    <p>© squabbled 2016-2022</p>
-   <a href="mailto:contact@squabbled.net">Email</p>
+   <a href="mailto:contact@squabbled.net">Email (Feel free to say hi!)</p>
 </footer> 
 </div> 
    <style>
