--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 <hr>
  <footer>
    <p>© squabbled 2016-2022</p>
+   <p>Website hosted by <a href=github.com>GitHub</a>, videos hosted by <a href=http://www.youtube.com>YouTube</a></p>
    <a href="mailto:contact@squabbled.net">Email (Feel free to say hi!)</p>
 </footer> 
 </div> 
