--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <a style="font-family:comfortaa" href=https://www.instagram.com/squabbledMC/>Instagram</a>
   <a style="font-family:comfortaa" href=https://steamcommunity.com/id/squabbled>Steam</a>
   <a style="font-family:comfortaa" href=https://discord.com/invite/89ZReCQtx5>Discord</a>
-  <a href=/specs.html>Specs</a>
+  <a style="font-family:comfortaa" href=/specs.html>Specs</a>
 </div> 
   </head>
   <body>
