--- a/specs.html
+++ b/specs.html
@@ -53,7 +53,7 @@
 <h1>Misc</h1>
 <p>VR Headset: Oculus Quest 2, attached via USB-C</p>
 <p>Controller: Xbox One X Gray/Green Controller</p>
-<p>Phone: iPhone 13 256 Blue</p>
+<p>Phone: iPhone 13 256gb Blue</p>
 <hr>
 <h1>Photos of setup (as of 4/5/2022)</h1>
 <img src="https://u.cubeupload.com/squabbled/5997D7340449464F8D37.jpg">
