--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>squabbled | YouTube tutorials, gameplays, reviews, and more!</title>
+    <title>squabbledMC | YouTube tutorials, gameplays, reviews, and more!</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-PEGFE6S8BX"></script>
 <script>
