--- a/specs.html
+++ b/specs.html
@@ -28,15 +28,18 @@
 <body>
   <h1>squabbled's PC specs of 2022</h1>
   <h2>This site will be updated as time goes on, and as I upgrade my system.</h2>
+ <p>Slight update: I got a new laptop so I will be adding more hardware here as that continues. The laptop's been added recently.</p>
   
  <hr>
-  <h1>Software</h1>
+ <h1>Desktop Specs:</h1>
+  <h2>Software</h2>
   <p>OS: Windows 10 Home (Using a 7 CD key to activate)</p>
   <p>Web Browser: Mozilla Firefox</p>
   <p>Recording/streaming/webcam software: <a href=https://obsproject.com/>OBS (Open Broadcaster Software)</a></p>
   <p>Voice Chatting/text messaging program: Discord</p>
+  <p>Controller Program: reWASD (I use reWASD since it allows you to customize controls in games that don't support controllers, or don't let you change controls)</p>
   <hr>
-<h1>Hardware</h1>
+<h2>Hardware</h2>
 <p>CPU: Intel Core i3-10100</p>
 <p>RAM: 16GB DDR4-2400</p>
 <p>GPU: nVidia GTX 1650 Super 4GB</p>
@@ -47,10 +50,9 @@
 <p>Boot SSD: 512GB SanDisk internal SSD (Sata, not M.2)</p>
 <p>Backup/File SSD: 256GB Kingston internal SSD</p>
 <p>Games drive: 1TB internal WD blue HDD</p>
-<p>Downloads/Files HDD: 1TB WD Passport</p>
 <p>New file/games drive: 5TB One Touch SeaGate HDD</p>
 <hr>
-<h1>Misc</h1>
+<h2>Misc</h2>
 <p>VR Headset: Oculus Quest 2, attached via USB-C</p>
 <p>Controller: Xbox One X Gray/Green Controller</p>
 <p>Phone: iPhone 13 256gb Blue</p>
@@ -60,7 +62,20 @@
 <img src="https://u.cubeupload.com/squabbled/BC8D81C71A7941CB9A64.jpg">
 <img src="https://u.cubeupload.com/squabbled/41C4671364244D2EA412.jpg">
 <img src="https://u.cubeupload.com/squabbled/248BC649F8DD400E9421.jpg">
-<p>Click <a href=/oldspecs.html>here</a> to see my old specs.</p>
+<p>Click <a href=/oldspecs.html>here</a> to see my old PC's specs.</p>
+
+<hr>
+<h1>Laptop Specs (Dell Inspiron 14):</h1>
+<h2>Software:</h2>
+<p>OS: Windows 11 Home</p>
+<p>(Pretty much all the same software as the desktop, although this laptop's meant for school and not really games)</p>
+<h2>Hardware:</h2>
+<p>CPU: Ryzen 5 5625U</p>
+<p>14 inch 1920x1200 16:10 display (with touchscreen, although it is a regular laptop and not a 2 in 1 so it doesn't get much use)<p>
+<p>GPU: Radeon Integrated Graphics (surprisingly capable, can play TF2 and lighter games fine)</p>
+<p>16GB of RAM</p>
+<p>512GB SSD</p>
+<p>(Bonus) 1TB WD Passport used both by desktop and laptop mostly for transfering files, will bring around with laptop for extra storage.</p>
 </body>
 <hr>
  <footer>
