--- a/specs.html
+++ b/specs.html
@@ -67,7 +67,7 @@
 <hr>
 <h1>Laptop Specs (Dell Inspiron 14):</h1>
 <h2>Software:</h2>
-<p>OS: Windows 11 Home</p>
+<p>OS: Windows 10 Home</p>
 <p>(Pretty much all the same software as the desktop, although this laptop's meant for school and not really games)</p>
 <h2>Hardware:</h2>
 <p>CPU: Ryzen 5 5625U</p>
@@ -75,7 +75,8 @@
 <p>GPU: Radeon Integrated Graphics (surprisingly capable, can play TF2 and lighter games fine)</p>
 <p>16GB of RAM</p>
 <p>512GB SSD</p>
-<p>(Bonus) 1TB WD Passport used both by desktop and laptop mostly for transfering files, will bring around with laptop for extra storage.</p>
+<p>256GB SanDisk USB 3 flash drive for files</p>
+<p>(This laptop came with Windows 11, however I have downgraded to 10 temporarily since 11 lacked some minor features I liked. I will be upgrading in the future, however)</p>
 </body>
 <hr>
  <footer>
