--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <h1>heyo, I'm squabbled</h1>
   <p>I make videos, mainly tutorials, but I also make tech reviews, gameplays, and more.</p>
   <p>This site is meant to be a place for me to write about myself, my projects/computers, and other junk that I dump on here.</p>
+    <p>Just a heads up: I will not be making videos until at least mid-August, possibly later. This is because I'm pretty busy at the moment and can't really do YouTube.</p>
 <hr>
  <footer>
    <p>© squabbled 2016-2022</p>
