--- a/specs.html
+++ b/specs.html
@@ -1,7 +1,7 @@
 <html>
  <head>
     <meta charset="UTF-8">
-    <title>squabbled | YouTube tutorials, gameplays, reviews, and more!</title>
+    <title>squabbled's computer specs</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-PEGFE6S8BX"></script>
 <script>
@@ -35,7 +35,7 @@
   <h2>Software</h2>
   <p>OS: Windows 10 Home (Using a 7 CD key to activate)</p>
   <p>Web Browser: Mozilla Firefox</p>
-  <p>Recording/streaming/webcam software: <a href=https://obsproject.com/>OBS (Open Broadcaster Software)</a></p>
+  <p>Recording/streaming software: <a href=https://obsproject.com/>OBS (Open Broadcaster Software)</a></p>
   <p>Voice Chatting/text messaging program: Discord</p>
   <p>Controller Program: reWASD (I use reWASD since it allows you to customize controls in games that don't support controllers, or don't let you change controls)</p>
   <hr>
@@ -44,8 +44,9 @@
 <p>RAM: 16GB DDR4-2400</p>
 <p>GPU: nVidia GTX 1650 Super 4GB</p>
 <p>Microphone: Blue Snowball Ice</p>
-<p>Headphones: Razer Kraken 2019</p>
+<p>Headphones: Anker SoundCore q20 (plugged in with included AUX cable on computer, however I do use it on my phone occasionally and use bluetooth.)</p>
 <p>Keyboard: <a href=https://www.youtube.com/watch?v=bWgkwNOxtxA>RK68 65%</a></p>
+<p>Mouse: <a href=https://www.youtube.com/watch?v=zSMDDUgt6ao>SteelSeries Rival 5</a></p>
 <p>Storage: I have a few drives so I'm gonna list them all down here.</p>
 <p>Boot SSD: 512GB SanDisk internal SSD (Sata, not M.2)</p>
 <p>Backup/File SSD: 256GB Kingston internal SSD</p>
@@ -67,16 +68,15 @@
 <hr>
 <h1>Laptop Specs (Dell Inspiron 14):</h1>
 <h2>Software:</h2>
-<p>OS: Windows 10 Home</p>
+<p>OS: Windows 10 Home (Laptop came with 11 but I didn't like it after about a week of using so I reinstalled 10)</p>
 <p>(Pretty much all the same software as the desktop, although this laptop's meant for school and not really games)</p>
 <h2>Hardware:</h2>
 <p>CPU: Ryzen 5 5625U</p>
 <p>14 inch 1920x1200 16:10 display (with touchscreen, although it is a regular laptop and not a 2 in 1 so it doesn't get much use)<p>
-<p>GPU: Radeon Integrated Graphics (surprisingly capable, can play TF2 and lighter games fine)</p>
+<p>GPU: Radeon Integrated Graphics</p>
 <p>16GB of RAM</p>
 <p>512GB SSD</p>
 <p>256GB SanDisk USB 3 flash drive for files</p>
-<p>(This laptop came with Windows 11, however I have downgraded to 10 temporarily since 11 lacked some minor features I liked. I will be upgrading in the future, however)</p>
 </body>
 <hr>
  <footer>
