navbar/mobile update

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
+	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">	 
     <title>squabbledMC | YouTube tutorials, gameplays, reviews, and more!</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-PEGFE6S8BX"></script>
@@ -12,10 +14,19 @@
 
   gtag('config', 'G-PEGFE6S8BX');
 </script>
+<script>function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+} </script>
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
 <meta name="description" content="squabbled.net: the official site for squabbledMC on YouTube">
 <meta name="keywords" content="squabbled, squabbledMC, minecraft, youtube, tutorials, tutorial, gaming">
+<link rel="stylesheet" type="text/css" href="style.css">
      <div class="topnav">
   <a style="font-family:comfortaa" href="/index.html">Home</a>
   <a style="font-family:comfortaa" href="https://www.youtube.com/squabbledMC">YouTube</a>
@@ -28,20 +39,10 @@
   <h1>heyo, I'm squabbled</h1>
   <p>I make videos, mainly tutorials, but I also make tech reviews, gameplays, and more.</p>
   <p>This site is meant to be a place for me to write about myself, my projects/computers, and other junk that I dump on here.</p>
-    <p>Just a heads up: I will not be making videos until at least mid-August, possibly later. This is because I'm pretty busy at the moment and can't really do YouTube.</p>
 <hr>
  <footer>
    <p>© squabbled 2016-2022</p>
-   <p>Website hosted by GitHub, videos hosted by <a href=http://www.youtube.com>YouTube</a></p>
-   <a href="mailto:contact@squabbled.net">Email (Feel free to say hi!)</p>
+   <a href="mailto:contact@squabbled.net">Email</p>
 </footer> 
 </div> 
-   <style>
-body {background-color: black;}
-h1   {color: white;}
-p    {color: white;}
-
-
-                            
-</style>
 </html>
