--- a/specs.html
+++ b/specs.html
@@ -11,14 +11,22 @@
 
   gtag('config', 'G-PEGFE6S8BX');
 </script>
+<script>function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+} </script>
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
 <meta name="description" content="squabbled.net: the official site for squabbledMC on YouTube">
 <meta name="keywords" content="squabbled, squabbledMC, minecraft, youtube, tutorials, tutorial, gaming">
+<link rel="stylesheet" type="text/css" href="style.css">
      <div class="topnav">
   <a style="font-family:comfortaa" href="/index.html">Home</a>
   <a style="font-family:comfortaa" href="https://www.youtube.com/squabbledMC">YouTube</a>
-  <a style="font-family:comfortaa" href="https://twitter.com/squabbledMC">Twitter</a>
   <a style="font-family:comfortaa" href=https://www.instagram.com/squabbledMC/>Instagram</a>
   <a style="font-family:comfortaa" href=https://steamcommunity.com/id/squabbled>Steam</a>
 
@@ -83,12 +91,4 @@
    <a href="mailto:contact@squabbled.net">Email</p>
 </footer> 
 </div> 
-   <style>
-body {background-color: black;}
-h1   {color: white;}
-p    {color: white;}
-
-
-                            
-</style>
 </html>
