added site version number

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
  <footer>
    <p>© squabbled 2016-2022</p>
    <a href="mailto:contact@squabbled.net">Email</p>
+   <p>site version 1 "galactic panda"</p>
 </footer> 
 </div> 
 </html>
