fix email footer bug with version number

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 <hr>
  <footer>
    <p>© squabbled 2016-2022</p>
+   <p>site current version 1: "galactic panda"</p>
    <a href="mailto:contact@squabbled.net">Email</p>
-   <p>site version 1 "galactic panda"</p>
 </footer> 
 </div> 
 </html>
