--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <a style="font-family:comfortaa" href="/index.html">Home</a>
   <a style="font-family:comfortaa" href="https://www.youtube.com/squabbledMC">YouTube</a>
   <a style="font-family:comfortaa" href=https://www.instagram.com/squabbledMC/>Instagram</a>
-  <a style="font-family:comfortaa" href=https://steamcommunity.com/id/squabbled>Steam</a>
+  <a style="font-family:comfortaa" href=/blog.html>Blog</a>
   <a style="font-family:comfortaa" href=/specs.html>Specs</a>
 </div> 
   </head>
