--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">	 
-    <title>squabbledMC | YouTube tutorials, gameplays, reviews, and more!</title>
+    <title>squabbledMC | tech blog posts, projects, YouTube videos, and more!</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-PEGFE6S8BX"></script>
 <script>
@@ -31,19 +31,25 @@
   <a style="font-family:comfortaa" href="/index.html">Home</a>
   <a style="font-family:comfortaa" href="https://www.youtube.com/squabbledMC">YouTube</a>
   <a style="font-family:comfortaa" href=https://www.instagram.com/squabbledMC/>Instagram</a>
-  <a style="font-family:comfortaa" href=/blog.html>Blog</a>
+  <a style="font-family:comfortaa" href=/blog>Blog</a>
   <a style="font-family:comfortaa" href=/specs.html>Specs</a>
+
 </div> 
   </head>
   <body>
-  <h1>heyo, I'm squabbled</h1>
+  <h1>heyo, i'm squabbled</h1>
   <p>I make videos, mainly tutorials, but I also make tech reviews, gameplays, and more.</p>
   <p>This site is meant to be a place for me to write about myself, my projects/computers, and other junk that I dump on here.</p>
 <hr>
  <footer>
    <p>© squabbled 2016-2022</p>
-   <p>site current version 1: "galactic panda"</p>
-   <a href="mailto:contact@squabbled.net">Email</p>
+   <p>site current version 2</p>
+   <a href="mailto:contact@squabbled.net">Email</a></p>
+<hr>
+<script async src="https://cse.google.com/cse.js?cx=a326499f9ae9247a0">
+</script>
+<div id="cse" style="width: 30%; margin: 100 auto">
+<div class="gcse-search"></div>
 </footer> 
 </div> 
 </html>
