--- a/specs.html
+++ b/specs.html
@@ -59,6 +59,8 @@
 <p>Backup/File SSD: 256GB Kingston internal SSD</p>
 <p>Games drive: 1TB internal WD blue HDD</p>
 <p>New file/games drive: 5TB One Touch SeaGate HDD</p>
+<p>Cloud Storage: 100GB <a href="https://one.google.com">Google One</a></p>
+<p>Video Storage: <a href="http://www.youtube.com/upload">YouTube</a>
 <hr>
 <h2>Misc</h2>
 <p>VR Headset: Oculus Quest 2, attached via USB-C</p>
