googleless update - new blog post

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">	 
-    <title>squabbledMC | YouTube tutorials, gameplays, reviews, and more!</title>
+    <title>squabbledMC | about me!</title>
 
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
@@ -19,7 +19,12 @@
 </div> 
   </head>
   <body>
-
+<h1>about me :D</h1>
+<p>hi, i'm squabbled!</p>
+<p>i'm a derp who really likes tech, computers, and just about anything with a screen on it.</p>
+<p>i've around the internet for quite some time now, and decided the limits of social media was annoying, so I made my own website ;)</p>
+<p>i've loved computers and tech for as long as i can even really remember to be honest, and made this site so i can have my own email address that's not a free domain... and seem cool to all my friends :3</p>
+<p>i'm aware that this about me sucks, but i'll eventually update it a bit.</p>
 <hr>
  <footer>
    <p>© squabbled 2016-2022</p>
