--- a/specs.html
+++ b/specs.html
@@ -2,23 +2,7 @@
  <head>
     <meta charset="UTF-8">
     <title>squabbled's computer specs</title>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-PEGFE6S8BX"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-PEGFE6S8BX');
-</script>
-<script>function myFunction() {
-  var x = document.getElementById("myTopnav");
-  if (x.className === "topnav") {
-    x.className += " responsive";
-  } else {
-    x.className = "topnav";
-  }
-} </script>
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
 <meta name="description" content="squabbled.net: the official site for squabbledMC on YouTube">
@@ -36,6 +20,7 @@
   <h1>squabbled's PC specs of 2022</h1>
   <h2>This site will be updated as time goes on, and as I upgrade my system.</h2>
  <p>Slight update: I got a new laptop so I will be adding more hardware here as that continues. The laptop's been added recently.</p>
+ <p>Slighter slight update: I started dualbooting linux with windows 10 and have the 2nd 256GB SSD running Ubuntu. the 512GB SSD is still running windows 10.</p>
   
  <hr>
  <h1>Desktop Specs:</h1>
@@ -55,8 +40,8 @@
 <p>Keyboard: <a href=https://www.youtube.com/watch?v=bWgkwNOxtxA>RK68 65%</a></p>
 <p>Mouse: <a href=https://www.youtube.com/watch?v=zSMDDUgt6ao>SteelSeries Rival 5</a></p>
 <p>Storage: I have a few drives so I'm gonna list them all down here.</p>
-<p>Boot SSD: 512GB SanDisk internal SSD (Sata, not M.2)</p>
-<p>Backup/File SSD: 256GB Kingston internal SSD</p>
+<p>Windows SSD (10): 512GB SanDisk internal SSD (Sata, not M.2)</p>
+<p>Linux SSD (Ubuntu): 256GB Kingston internal SSD</p>
 <p>Games drive: 1TB internal WD blue HDD</p>
 <p>New file/games drive: 5TB One Touch SeaGate HDD</p>
 <p>Cloud Storage: 100GB <a href="https://one.google.com">Google One</a></p>
