--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <a style="font-family:comfortaa" href=https://www.instagram.com/squabbledMC/>Instagram</a>
   <a style="font-family:comfortaa" href=/blog>Blog</a>
   <a style="font-family:comfortaa" href=/specs.html>Specs</a>
-  <a style="font-family:comfortaa" href
+  <a style="font-family:comfortaa" href=/about.html>about me</a>
 </div> 
   </head>
   <body>
