small update to index

--- a/index.html
+++ b/index.html
@@ -24,11 +24,14 @@
   <h1>heyo, i'm squabbled</h1>
   <p>I make videos, mainly tutorials, but I also make tech reviews, gameplays, and more.</p>
   <p>This site is meant to be a place for me to write about myself, my projects/computers, and other junk that I dump on here.</p>
+  <p>Feel free to click around and see this tiny little corner i've made for myself on this great big internet.</p>
 <hr>
  <footer>
    <p>© squabbled 2016-2022</p>
    <p>site current version 2</p>
    <a href="mailto:contact@squabbled.net">Email</a></p>
+   <p>This site is hosted via GitHub. All usage must comply with GitHub's terms of service.</p>
+   <p>This site does not use any cookies whatsoever, or any advertising.</p>
 <hr>
 </footer> 
 </div> 
