--- a/projects/index.html
+++ b/projects/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">	 
-    <title>squabbledMC - Blog</title>
+    <title>squabbledMC | projects and whatevers.</title>
 
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
@@ -19,16 +19,6 @@
 </div> 
   </head>
   <body>
-<hr>
-<h1>Blog list</h1>
-<p>This is a list of all blog posts categorized by date (newest first)</p>
-<a href="/blog/12322.html">Breaking the silence... 12/3/2022</a>
-<hr>
-<a href="/blog/93022.html">Linux, site updates, and channel updates. 09/30/2022</a>
-<hr>
-<a href="/blog/81822.html">Upkeep and updates 08/19/2022</a>
-<hr>
-<a href="/blog/73122.html">Domain troubles and blogs - 07/31/2022</a>
 
 <hr>
  <footer>
