--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
  <footer>
    <p>© squabbled 2016-2022</p>
    <p>site current version 2</p>
-   <a href="mailto:contact@squabbled.net">Email</a></p>
+  <A HREF="&#109;&#97;&#105;&#108;&#116;&#111;&#58;%63%6F%6E%74%61%63%74%40%73%71%75%61%62%62%6C%65%64%2E%6E%65%74">Email (feel free to say hi!)</A></p>
    <p>This site is hosted via GitHub. All usage must comply with GitHub's terms of service.</p>
    <p>This site does not use any cookies whatsoever, or any advertising.</p>
 <hr>
