--- a/index.html
+++ b/index.html
@@ -18,20 +18,22 @@
   <a style="font-family:comfortaa" href=/blog>Blog</a>
   <a style="font-family:comfortaa" href=/specs.html>Specs</a>
   <a style="font-family:comfortaa" href=/about.html>about me</a>
+  <a style="font-family:comfortaa" href=/projects>projects</a>
+  <a style="font-family:comfortaa" href="https://discord.gg/PJWt8BszpU">Discord</a>
 </div> 
   </head>
   <body>
   <h1>heyo, i'm squabbled</h1>
-  <p>I make videos, mainly tutorials, but I also make tech reviews, gameplays, and more.</p>
-  <p>This site is meant to be a place for me to write about myself, my projects/computers, and other junk that I dump on here.</p>
-  <p>Feel free to click around and see this tiny little corner i've made for myself on this great big internet.</p>
+  <p>i'm just some person who's site you happened to stumble across. i like computers, tech, and sushi. feel free to click about me for more about me.</p>
+  <p>this site basically is just my dumping grounds for thoughts, blog posts, projects, servers, and what else.</p>
+  <p>feel free to click around and see this tiny little corner i've made for myself on this great big internet.</p>
+  
 <hr>
  <footer>
    <p>© squabbled 2016-2023</p>
-   <p>site current version 2</p>
+   <p>site current version 3</p>
   <A HREF="&#109;&#97;&#105;&#108;&#116;&#111;&#58;%63%6F%6E%74%61%63%74%40%73%71%75%61%62%62%6C%65%64%2E%6E%65%74">Email (feel free to say hi!)</A></p>
-   <p>This site is hosted via GitHub. All usage must comply with GitHub's terms of service.</p>
-   <p>This site does not use any cookies whatsoever, or any advertising.</p>
+   <p>This site may some cross-site cookies for YouTube embeds and other tools.</p>
 <hr>
 </footer> 
 </div> 
