--- a/projects/index.html
+++ b/projects/index.html
@@ -19,11 +19,14 @@
 </div> 
   </head>
   <body>
-
+<h1>Projects</h1>
+<a href="https://greasyfork.org/en/scripts/449755-kittyclickr-bring-back-the-old-instagram-feed">kittyclickr - renables the chronological, non-algorithmic Instagram feed (UserScript, greasyfork.org)</a>
+<a href="https://discord.gg/VNxafcqys8">Minecraft SMP - our minecraft java SMP! click here to apply to join! (we're accepting everyone, but we're whitelisted to stop chaos from ensuing)</a>
+<p>and more to come! :3</p>
 <hr>
  <footer>
-   <p>© squabbled 2016-2022</p>
-   <a href="mailto:contact@squabbled.net">Email</p>
+   <p>© squabbled 2016-2023</p>
+   <a href="mailto:&#109;&#97;&#105;&#108;&#116;&#111;&#58;%63%6F%6E%74%61%63%74%40%73%71%75%61%62%62%6C%65%64%2E%6E%65%74">Email</p>
 </footer> 
 </div> 
 </html>
