--- a/about.html
+++ b/about.html
@@ -16,19 +16,22 @@
   <a style="font-family:comfortaa" href="https://www.youtube.com/squabbledMC">YouTube</a>
   <a style="font-family:comfortaa" href=https://www.instagram.com/squabbledMC/>Instagram</a>
   <a style="font-family:comfortaa" href=/specs.html>Specs</a>
+    <a style="font-family:comfortaa" href="https://discord.gg/PJWt8BszpU">Discord</a>
+    <a style="font-family:comfortaa" href="https://discord.gg/PJWt8BszpU">Discord</a>
 </div> 
   </head>
   <body>
 <h1>about me :D</h1>
-<p>hi, i'm squabbled!</p>
+<p>hi, i'm squabbled (or bit, either one works)!</p>
 <p>i'm a derp who really likes tech, computers, and just about anything with a screen on it.</p>
 <p>i've around the internet for quite some time now, and decided the limits of social media was annoying, so I made my own website ;)</p>
+<p>my favorite food is sushi, i love happy hardcore/techno/trance music, and :3'ing a lot. (:3)</p>
 <p>i've loved computers and tech for as long as i can even really remember to be honest, and made this site so i can have my own email address that's not a free domain... and seem cool to all my friends :3</p>
 <p>i'm aware that this about me sucks, but i'll eventually update it a bit.</p>
 <hr>
  <footer>
-   <p>© squabbled 2016-2022</p>
-   <a href="mailto:contact@squabbled.net">Email</p>
+   <p>© squabbled 2016-2023</p>
+   <a href="mailto:&#109;&#97;&#105;&#108;&#116;&#111;&#58;%63%6F%6E%74%61%63%74%40%73%71%75%61%62%62%6C%65%64%2E%6E%65%74">Email</p>
 </footer> 
 </div> 
 </html>
