--- a/specs.html
+++ b/specs.html
@@ -73,8 +73,8 @@
 </body>
 <hr>
  <footer>
-   <p>© squabbled 2016-2022</p>
-   <a href="mailto:contact@squabbled.net">Email</p>
+   <p>© squabbled 2016-2023</p>
+   <a href="mailto:&#109;&#97;&#105;&#108;&#116;&#111;&#58;%63%6F%6E%74%61%63%74%40%73%71%75%61%62%62%6C%65%64%2E%6E%65%74">Email</p>
 </footer> 
 </div> 
 </html>
