--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <a style="font-family:comfortaa" href=/specs.html>Specs</a>
   <a style="font-family:comfortaa" href=/about.html>about me</a>
   <a style="font-family:comfortaa" href=/projects>projects</a>
-  <a style="font-family:comfortaa" href="https://discord.gg/PJWt8BszpU">Discord</a>
+  <a style="font-family:comfortaa" href="https://discord.gg/SWCKgzZg9a">Discord</a>
 </div> 
   </head>
   <body>
