--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      <div class="topnav">
   <a style="font-family:comfortaa" href="/index.html">Home</a>
   <a style="font-family:comfortaa" href="https://www.youtube.com/squabbledMC">YouTube</a>
-  <a style="font-family:comfortaa" href=https://www.instagram.com/squabbledMC/>Instagram</a>
+  <a style="font-family:comfortaa" href="https://www.instagram.com/squabbledMC/">Instagram</a>
   <a style="font-family:comfortaa" href=/blog>Blog</a>
   <a style="font-family:comfortaa" href=/specs.html>Specs</a>
   <a style="font-family:comfortaa" href=/about.html>about me</a>
@@ -33,7 +33,6 @@
    <p>© squabbled 2016-2023</p>
    <p>site current version 3</p>
   <A HREF="&#109;&#97;&#105;&#108;&#116;&#111;&#58;%63%6F%6E%74%61%63%74%40%73%71%75%61%62%62%6C%65%64%2E%6E%65%74">Email (feel free to say hi!)</A></p>
-   <p>This site may some cross-site cookies for YouTube embeds and other tools.</p>
 <hr>
 </footer> 
 </div> 
