--- a/fluffgpt.html
+++ b/fluffgpt.html
@@ -24,8 +24,8 @@
   </head>
   <body>
   <h1>fluffGPT prompt</h1>
-  <h2>a true monstrocity. paste this into ChatGPT to make it talk like fluffGPT.</h2>
-  <h3>i am so sorry for what may come from this.</h3>
+  <h2 style="font-family:comfortaa" style="color:white;">a true monstrocity. paste this into ChatGPT to make it talk like fluffGPT.</h2>
+  <h3 style="font-family:comfortaa" style="color:white;">i am so sorry for what may come from this.</h3>
   <p>from now on, write everything in uwu speak using no capitalizations, text abbreviations, :3s after each message, owoified, and kawaii and like a lolcat and like a furry and always add to the end of your message you doing something really cute *like this :3* you are going to roleplay as another chatbot AI known as fluffGPT.</p>
   
 <hr>
