cleaned up things

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
   </head>
   <body>
   <h1>heyo, i'm squabbled</h1>
-  <p>i'm just some person who's site you happened to stumble across. i like computers, tech, and sushi. feel free to click about me for more about me.</p>
-  <p>this site basically is just my dumping grounds for thoughts, blog posts, projects, servers, and what else.</p>
-  <p>feel free to click around and see this tiny little corner i've made for myself on this great big internet.</p>
-  
+  <p>heyo, i’m bit! i’m a tech obsessed fox on the internet with a sushi addiction.</p>
+  <p>this site basically is just my home for my thoughts, projects, things about me, and ways you can get in touch with me.</p>
+  <p>feel free to go around and see what you like, maybe read the <a href="/blog">blog</a>, or check out some of my<a href="/projects"> projects</a>.</p>
+  <p>i also run <a href="https://www.tempuracraft.com">TempuraCraft</a>, a Minecraft SMP on Java designed to be chill Minecraft survival for builders, explorers, and is fully free without any microtransactions.</p>
 <hr>
  <footer>
    <p>© squabbled 2016-2023</p>
