--- a/projects/index.html
+++ b/projects/index.html
@@ -20,8 +20,8 @@
   </head>
   <body>
 <h1>Projects</h1>
+<a href="https://discord.gg/VNxafcqys8">TempuraCraft - a Minecraft Java SMP with a friendly community, no pay to win features, plugins such as McMMO, and on the latest version. Play Minecraft online how it was intended!</a>
 <a href="https://greasyfork.org/en/scripts/449755-kittyclickr-bring-back-the-old-instagram-feed">kittyclickr - renables the chronological, non-algorithmic Instagram feed (UserScript, greasyfork.org)</a>
-<a href="https://discord.gg/VNxafcqys8">Minecraft SMP - our minecraft java SMP! click here to apply to join! (we're accepting everyone, but we're whitelisted to stop chaos from ensuing)</a>
 <p>and more to come! :3</p>
 <hr>
  <footer>
