--- a/specs.html
+++ b/specs.html
@@ -1,6 +1,7 @@
 <html>
  <head>
     <meta charset="UTF-8">
+		 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>squabbled's computer specs</title>
 
 <meta name="msapplication-TileColor" content="#da532c">
@@ -17,40 +18,40 @@
 </div> 
   </head>
 <body>
-  <h1>squabbled's PC specs of 2022</h1>
+  <h1>squabbled's PC specs of 2023</h1>
   <h2>This site will be updated as time goes on, and as I upgrade my system.</h2>
- <p>Slight update: I got a new laptop so I will be adding more hardware here as that continues. The laptop's been added recently.</p>
- <p>Slighter slight update: I started dualbooting linux with windows 10 and have the 2nd 256GB SSD running Ubuntu. the 512GB SSD is still running windows 10.</p>
+<p>Removed all the old updates and as of 5/25/23, I am only booting Windows 10. I gave up on Ubuntu Desktop and went back to just using 10. Will I upgrade to 11? Who knows.</p>
+<p>I also have a Steam Deck and some other hardware, but if you really want the specs, <a href="https://www.google.com/search?&q=steam+deck+specs">Google it.</a></p>
   
  <hr>
  <h1>Desktop Specs:</h1>
-  <h2>Software</h2>
-  <p>OS: Windows 10 Home (Using a 7 CD key to activate)</p>
-  <p>Web Browser: Mozilla Firefox</p>
-  <p>Recording/streaming software: <a href=https://obsproject.com/>OBS (Open Broadcaster Software)</a></p>
-  <p>Voice Chatting/text messaging program: Discord</p>
-  <p>Controller Program: reWASD (I use reWASD since it allows you to customize controls in games that don't support controllers, or don't let you change controls)</p>
-  <hr>
+
 <h2>Hardware</h2>
 <p>CPU: Intel Core i3-10100</p>
 <p>RAM: 16GB DDR4-2400</p>
 <p>GPU: nVidia GTX 1650 Super 4GB</p>
 <p>Microphone: Blue Snowball Ice</p>
-<p>Headphones: Anker SoundCore q20 (plugged in with included AUX cable on computer, however I do use it on my phone occasionally and use bluetooth.)</p>
+<p>Headphones: Anker SoundCore q20</p>
 <p>Keyboard: <a href=https://www.youtube.com/watch?v=bWgkwNOxtxA>RK68 65%</a></p>
 <p>Mouse: <a href=https://www.youtube.com/watch?v=zSMDDUgt6ao>SteelSeries Rival 5</a></p>
-<p>Storage: I have a few drives so I'm gonna list them all down here.</p>
-<p>Windows SSD (10): 512GB SanDisk internal SSD (Sata, not M.2)</p>
-<p>Linux SSD (Ubuntu): 256GB Kingston internal SSD</p>
+<p>Storage:</p>
+<p>Main SSD (10): 512GB SanDisk internal SSD (Sata, not M.2)</p>
+<p>Backup SSD: 256GB Kingston internal SSD</p>
 <p>Games drive: 1TB internal WD blue HDD</p>
 <p>New file/games drive: 5TB One Touch SeaGate HDD</p>
-<p>Cloud Storage: 100GB <a href="https://one.google.com">Google One</a></p>
-<p>Video Storage: <a href="http://www.youtube.com/upload">YouTube</a>
+<p>Cloud Storage: 200GB <a href="https://one.google.com">Google One</a></p>
+  <h2>Software</h2>
+  <p>OS: Windows 10 Home </p>
+  <p>Web Browser: Mozilla Firefox</p>
+  <p>Recording/streaming software: <a href=https://obsproject.com/>OBS (Open Broadcaster Software)</a></p>
+  <p>Controller Program: reWASD/Steam Remapper</p>
+  <hr>
 <hr>
 <h2>Misc</h2>
 <p>VR Headset: Oculus Quest 2, attached via USB-C</p>
 <p>Controller: Xbox One X Gray/Green Controller</p>
 <p>Phone: iPhone 13 256gb Blue</p>
+<p>Adblocker: <a href="https://www.ublockorigin.com>uBlock Origin</a> with <a href="https://pi-hole.net/">a Pi-hole running on a Pi2B</a>.</p>
 <hr>
 <h1>Photos of setup (as of 4/5/2022)</h1>
 <img src="https://u.cubeupload.com/squabbled/5997D7340449464F8D37.jpg">
@@ -60,9 +61,6 @@
 
 <hr>
 <h1>Laptop Specs (Dell Inspiron 14):</h1>
-<h2>Software:</h2>
-<p>OS: Windows 10 Home (Laptop came with 11 but I didn't like it after about a week of using so I reinstalled 10)</p>
-<p>(Pretty much all the same software as the desktop, although this laptop's meant for school and not really games)</p>
 <h2>Hardware:</h2>
 <p>CPU: Ryzen 5 5625U</p>
 <p>14 inch 1920x1200 16:10 display (with touchscreen, although it is a regular laptop and not a 2 in 1 so it doesn't get much use)<p>
