--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
   <p>i also run <a href="https://www.tempuracraft.com">TempuraCraft</a>, a Minecraft SMP on Java designed to be chill Minecraft survival for builders, explorers, and is fully free without any microtransactions.</p>
 <hr>
  <footer>
-   <p>© squabbled 2016-2023</p>
-   <p>This site is NOT related to whatsoever to <a href="https://squabble.me">Squabble, the Wordle game</a>, nor <a href="https://squabbles.io">Squabbles, the Reddit competitor</a>. This is an independently owned and operated site by me, squabbled. All emails/Discord messages related to these sites will be ignored.</p>
+   <p>© squabbled 2016-2023. All rights reserved.</p>
    <p>site current version 3</p>
   <A HREF="&#109;&#97;&#105;&#108;&#116;&#111;&#58;%63%6F%6E%74%61%63%74%40%73%71%75%61%62%62%6C%65%64%2E%6E%65%74">Email (feel free to say hi!)</A></p>
 <hr>
