slight update and added mastodon

--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
   <a style="font-family:comfortaa" href="https://www.youtube.com/squabbledMC">YouTube</a>
   <a style="font-family:comfortaa" href="https://www.instagram.com/squabbledMC/">Instagram</a>
   <a style="font-family:comfortaa" href=/blog>Blog</a>
-  <a style="font-family:comfortaa" href=/specs.html>Specs</a>
-  <a style="font-family:comfortaa" href=/about.html>about me</a>
-  <a style="font-family:comfortaa" href=/projects>projects</a>
+  <a style="font-family:comfortaa" href=/specs>Specs</a>
+  <a style="font-family:comfortaa" href=/about>About </a>
+  <a style="font-family:comfortaa" href=/projects>Projects</a>
   <a style="font-family:comfortaa" href="https://discord.gg/SWCKgzZg9a">Discord</a>
+  <a style="font-family:comfortaa" rel="me" href="https://katsudon.squabbled.net/@bit">Mastodon</a>
 </div> 
   </head>
   <body>
