KittyClickr blog post

--- a/projects/index.html
+++ b/projects/index.html
@@ -12,15 +12,15 @@
 <meta name="keywords" content="squabbled, squabbledMC, minecraft, youtube, tutorials, tutorial, gaming">
 <link rel="stylesheet" type="text/css" href="style.css">
      <div class="topnav">
-  <a style="font-family:comfortaa" href="/index.html">Home</a>
+  <a style="font-family:comfortaa" href="/index">Home</a>
   <a style="font-family:comfortaa" href="https://www.youtube.com/squabbledMC">YouTube</a>
   <a style="font-family:comfortaa" href=https://www.instagram.com/squabbledMC/>Instagram</a>
-  <a style="font-family:comfortaa" href=/specs.html>Specs</a>
+  <a style="font-family:comfortaa" href=/specs>Specs</a>
 </div> 
   </head>
   <body>
 <h1>Projects</h1>
-<a href="https://discord.gg/VNxafcqys8">TempuraCraft - a Minecraft Java SMP with a friendly community, no pay to win features, plugins such as McMMO, and on the latest version. Play Minecraft online how it was intended!</a>
+<a href="https://www.tempuracraft.com">TempuraCraft - a Minecraft Java SMP with a friendly community, no pay to win features, plugins such as McMMO, and on the latest version. Play Minecraft online how it was intended!</a>
 <a href="https://greasyfork.org/en/scripts/449755-kittyclickr-bring-back-the-old-instagram-feed">kittyclickr - renables the chronological, non-algorithmic Instagram feed (UserScript, greasyfork.org)</a>
 <p>and more to come! :3</p>
 <hr>
