fix bugs and give hugs

--- a/projects/kittyclickr/index.html
+++ b/projects/kittyclickr/index.html
@@ -26,7 +26,7 @@
     <p>don't worry - your old algorithmic feed is still there. kittyclickr just temporarily opts you out. click on the back button or home button on the top/side of the screen to go back, and see stories.</p>
 
     <!-- Auto width -->
-    <button onclick="window.location.href='https://www.squabbled.net/projects/kittyclickr/kittyclickr.js'" class="btn"><i class="fa fa-download"></i> click me to install!</button>
+    <button onclick="window.location.href='https://greasyfork.org/scripts/449755-kittyclickr-bring-back-the-old-instagram-feed/code/kittyclickr%20-%20bring%20back%20the%20old%20instagram%20feed.user.js'" class="btn"><i class="fa fa-download"></i> click me to install!</button>
     <h1>is it safe?</h1>
     <p>yes. the entire script is fully open source and does nothing more than redirect you to the chronological instagram feed URL. it contains no ads, trackers, or cryptominers.</p>
     <h1>does this work on mobile?</h1>
