--- a/projects/index.html
+++ b/projects/index.html
@@ -21,7 +21,8 @@
   <body>
 <h1>Projects</h1>
 <a href="https://www.tempuracraft.com">TempuraCraft - a Minecraft Java SMP with a friendly community, no pay to win features, plugins such as McMMO, and on the latest version. Play Minecraft online how it was intended!</a>
-<a href="https://greasyfork.org/en/scripts/449755-kittyclickr-bring-back-the-old-instagram-feed">kittyclickr - renables the chronological, non-algorithmic Instagram feed (UserScript, greasyfork.org)</a>
+<hr>
+<a href="https://www.squabbled.net/projects/kittyclickr/index.html">kittyclickr - renables the chronological, non-algorithmic Instagram feed (UserScript, greasyfork.org)</a>
 <p>and more to come! :3</p>
 <hr>
  <footer>
