--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <a style="font-family:comfortaa" href=/about>About </a>
   <a style="font-family:comfortaa" href=/projects>Projects</a>
   <a style="font-family:comfortaa" href="https://discord.gg/SWCKgzZg9a">Discord</a>
-  <a style="font-family:comfortaa" rel="me" href="https://katsudon.squabbled.net/@bit">Mastodon</a>
+  <a style="font-family:comfortaa" rel="me" href="https://tumblr.squabbled.net">Tumblr</a>
 </div> 
   </head>
   <body>
